# composer4

./: .coveragerc  .env  .gitattributes  .gitattributes (1)  .gitignore  .gitignore (1)  .gitignore.backup  .pre-commit-config.yaml  BASE_DUV_V3_PROGRESS.md  CHANGELOG (1).md  CHANGELOG.md  CMakeLists.txt  COLAB_QUICKSTART.md  COLAB_TRAINING.md  COLAB_ZIP_UPLOAD.md  CONTRIBUTING.md  DUV_IMPLEMENTATION_STATUS.md  Dockerfile  Dockerfile.artic  GEMINI_PROMPT.md  GEMINI_SIMPLE_PROMPT.txt  IMPLEMENTATION_REPORT_20251011.md  LICENSE  Makefile  Makefile (1)  NOTICE  README.md  TRAINING_GUIDE.md  adaptive_learning.py  articulation_schema.yaml  build_all_json.py  build_backend.py  codex.yaml  conftest (1).py  conftest.py  control_config.py  controls_spline.py  docker-compose.yml  duration_data.csv  emotion_humanizer.py  (+66 more)
.chglog/: config.yml
.codex/: setup.sh
.devcontainer/: Dockerfile
.tmp.driveupload/: 1962272  1962274  1962276  1962278  1962280  1962282  1962300  1962304  1962312  1962314  1962318  1962322  1962336  1962348  1962350  1962352  1962358  1962362  1962366  1962368  1962374  1962376  1962380  1962382  1962384  1962386  1962390  1962402  1962406  1962408  1962410  1962412  1962418  1962422  1962424  1962426  1962432  1962434  1962438  1962442  (+61122 more)
api/: .DS_Store (1)  sax_server.py  server.py  session_manager.py  vocal_server.py
articulation_tagger/: __init__.py
artifacts/: auto_tau_clap.yaml  auto_tau_mert.yaml
cli/: ir_render.py
conf/: data.yaml  eval.yaml  model.yaml  trainer.yaml
config/: drum_settings.yaml  main_cfg.yml  main_cfg_example.yml  sax_demo.yml
configs/: duration_model.yaml  lyrics_align.yaml  mixing.yaml  pedal_model.yaml  phrase_model.yaml  render.yaml  velocity_model.yaml
cyext/: __init__.py  __init__.pyi  generators.pyx  humanize.pyi  humanize.pyx
data_ops/: augment.py  auto_tag.py
datasets/: __init__.py  adapter_pop909.py  base_adapter.py
docs/: ARCH.md  COMPLETE_MUSIC_ARCHITECTURE.md  DUV_CONFIG_EXAMPLE.md  DUV_LORA_TRAINING.md  FUTURE_SELF_IMPROVING_SYSTEM.md  LAMDA_EXECUTION_CHECKLIST.md  LAMDA_LOCAL_SETUP.md  LAMDA_README.md  LAMDA_STAGE2_SPEC.md  LAMDA_UNIFIED_ARCHITECTURE.md  ROADMAP_canvas.md  ai.md  ai_generator.md  amp_guide.md  architecture.md  arrangement_features.md  audio_pipeline.md  auto_tag_aug.md  aux_features.md  bass_advanced.md  changelog.md  cli_audio_to_midi_batch.md  config_reference.md  controls.md  corpus.md  data_articulation.md  data_note_schema.md  diversity.md  duv_data_enrichment.md  effect_presets.md  effects.md  evaluation_metrics.md  fx_guide.md  generator_usage.md  groove.md  groove_sampler.md  groove_sampler_v2.md  gui.md  gui_v2_walkthrough.md  guitar_generator.md  (+33 more)
eval/: abx_gui.py  blec.py  latency.py  metrics.py
examples/: README.md  drumgen_tempo_curve.ipynb  example_embedding_cache.py  groove_sampler.ipynb  lofi_ws_client.py
generator/: __init__.py  arranger.py  articulation.py  base_part_generator.py  bass_generator.py  bass_utils.py  chord_voicer.py  counter_line.py  drum_generator.py  guitar_generator.py  melody_generator.py  modular_composer_stub.py  obligato_generator.py  piano_generator.py  piano_ml_generator.py  scale,  (+8 more)
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/modcompose/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  plugin.cpp
plugins/piano_companion/: .DS_Store (1)  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/piano_companion/bindings/: plugin.cpp
plugins/sax_companion/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  plugin.cpp  ringbuffer.h
plugins/vocal_companion/: .DS_Store (1)  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  generate_bindings.py
plugins/vocal_companion/bindings/: plugin.cpp
(+997 files in other folders)
