[options.extras_require]
ai =
    torch>=2.3
    transformers>=4.42
audio =
    librosa>=0.10
    soundfile>=0.12
test =
    scikit-learn>=1.3
    mido>=1.3
    pretty_midi>=0.2
    websockets>=12.0
    fastapi>=0.85
    httpx>=0.23
    pytest-asyncio>=0.20
    starlette>=0.25
    numpy
    soundfile
cli =
    pretty_midi>=0.2
    tqdm>=4.66
    ruamel.yaml>=0.17
    colorama>=0.4
ml =
    torch>=2.3
    pytorch-lightning>=2.3
    hydra-core
    wandb
dev =
    httpx
